[project]
name = "rs-downloader"
version = "0.1.4"
description = "download audio from rs"
authors = [
    { name = "OhkuboSGMS", email = "ginger.os777146th@gmail.com" }
]
dependencies = [
    "playwright>=1.47.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.9",
    "fire>=0.7.0",
]

[tool.rye.scripts]
check = { chain = ["ruff:check","ruff:format"] }
"ruff:check" = "ruff check --select I --fix"
"ruff:format" = "ruff format"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rs_downloader"]
